welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: ';' expected but ')' found.
if (10>=a && a>=20 && 10>=b && b>=20){return 0)}else{return Math.max(a,b}
                                              ^max1020:3: error: ')' expected but '}' found.
if (10>=a && a>=20 && 10>=b && b>=20){return 0)}else{return Math.max(a,b}
                                                                        ^